<?xml version="1.0"?>
<package>
  <name>teleop_legged_robots</name>
  <version>1.0.0</version>
  <description>Generic keyboard teleop for legged robots.</description>

  <maintainer email="tboro@softserveinc.com">Taras Borovets</maintainer>

  <license>BSD</license>

<!--  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>-->

  <author>Taras Borovets</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
